# VITPerftests

./: CMakeLists.txt  README.md
include/: perf_arrayfire.h  perf_opencv.h  perf_opencv_cl.h  perf_opencv_cuda.h  perf_vipm.h  perftests.h
src/: main.cpp  perf_arrayfire.cpp  perf_opencv.cpp  perf_opencv_cl.cpp  perf_opencv_cuda.cpp  perf_vipm.cpp  perftests.cpp
src/gtest/src/: gtest.cc
src/tests/: arrayfire_tests.h  clcv_tests.h  cuda_tests.h  opencv_tests.h  vipm_tests.h
